# static_cpp_test

./: CMakeLists.txt  README.md  conanprofile.txt
includes/: static.hpp
src/: main.cpp  static.cpp
